--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<ul>
 					<li>Data de lançamento: 26 de novembro de 2015</li>
 					<li>Desenvolvedora: Ubisoft</li>
-					<li>Site de compra:<a href=https://store.ubi.com/ofertas/checkout?lang=pt_BR target="_blank"> Clique Aqui</a></li>
+					<li>Site de compra:<a href=https://play.google.com/store/apps/details?id=com.supercell.clashroyale&hl=pt_BR&gl=US target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: Jogo de tiro tático</li>
 					<li>Tamanho: 61 GB</li>
 					<li>Sinopse: Tom Clancy's Rainbow Six Siege é um jogo de tiro na primeira pessoa táctico,
