--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<ul>
 					<li>Data de lançamento: Novembro de 2011</li>
 					<li>Desenvolvedora: Mojang</li>
-					<li>Site de compra:<a href=https://www.minecraft.net/pt-pt/get-minecraft target="_blank"> Clique Aqui</a></li>
+					<li>Site de compra:<a href="https://www.minecraft.net/pt-pt/get-minecraft" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: Aventura e Construção</li>
 					<li>Tamanho: 4GB</li>
 					<li>Sinopse: Minecraft é um jogo eletrônico, que tem por objetivo básico construir e quebrar blocos.
@@ -55,7 +55,7 @@
 				<ul>
 					<li>Data de lançamento: 27/03/2014</li>
 					<li>Desenvolvedora: Nintendo</li>
-					<li>Site de compra:<a href=https://www.nintendo.pt/Jogos/Super-Nintendo/Super-Mario-Kart-279580.html target="_blank"> Clique Aqui</a></li>
+					<li>Site de compra:<a href="https://www.nintendo.pt/Jogos/Super-Nintendo/Super-Mario-Kart-279580.html" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: Corrida</li>
 					<li>Tamanho: 38,81MB</li>
 					<li>Sinopse: Em Super Mario Kart você também irá comandar um kart, contudo, o seu objetivo não é chegar em primeiro lugar,
@@ -75,7 +75,7 @@
 				<ul>
 					<li>Data de lançamento: 10 de março de 2020</li>
 					<li>Desenvolvedora: Activision</li>
-					<li>Site de download: <a href=https://www.callofduty.com/content/atvi/callofduty/warzone/web/pt_br/download.html target="_blank"> Clique Aqui</a></li>
+					<li>Site de download: <a href="https://www.callofduty.com/content/atvi/callofduty/warzone/web/pt_br/download.html" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: Battle Royale de Ação</li>
 					<li>Tamanho: 11.8GB</li>
 					<li>Sinopse: Warzone permite um combate em um modo multijogador on-line entre 150 jogadores na cidade fictícia de Verdansk,
@@ -94,7 +94,7 @@
 				<ul>
 					<li>Data de lançamento: 27 de outubro de 2009</li>
 					<li>Desenvolvedora: Riot Games</li>
-					<li>Site de download:<a href=https://signup.br.leagueoflegends.com/pt/signup/redownload target="_blank"> Clique Aqui</a></li>
+					<li>Site de download:<a href="https://signup.br.leagueoflegends.com/pt/signup/redownload" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: MOBA</li>
 					<li>Tamanho: 16GB</li>
 					<li>Sinopse: League of Legends é um jogo de estratégia em que duas equipes de cinco poderosos Campeões
@@ -114,7 +114,7 @@
 				<ul>
 					<li>Data de lançamento: 26 de novembro de 2015</li>
 					<li>Desenvolvedora: Ubisoft</li>
-					<li>Site de compra:<a href=https://play.google.com/store/apps/details?id=com.supercell.clashroyale&hl=pt_BR&gl=US target="_blank"> Clique Aqui</a></li>
+					<li>Site de compra:<a href="https://www.ubisoft.com/pt-br/game/rainbow-six/siege?ncid=209-2559---1-SCH-6-11-22_BR_DM_R6E_FWD_REA_UbiForward_GSR--20-22-10-0621-6----ID_108758-----&maltcode=digitalmarketing_C2W_SCH_googlesearch___R6S____&addinfo=&gclid=Cj0KCQjw_4-SBhCgARIsAAlegrUByQUKs1A41oYR02AxQts52aYXrqmG2GR1Yk2etayUEhksGjO5TI0aAnQQEALw_wcB" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: Jogo de tiro tático</li>
 					<li>Tamanho: 61 GB</li>
 					<li>Sinopse: Tom Clancy's Rainbow Six Siege é um jogo de tiro na primeira pessoa táctico,
@@ -134,7 +134,7 @@
 				<ul>
 					<li>Data de lançamento: 2 de março de 2016</li>
 					<li>Desenvolvedora: Supercell</li>
-					<li>Site de download:<a href="https://www.minecraft.net/pt-pt/get-minecraft" target="_blank"> Clique Aqui</a></li>
+					<li>Site de download:<a href="https://play.google.com/store/apps/details?id=com.supercell.clashroyale&hl=pt_BR&gl=US" target="_blank"> Clique Aqui</a></li>
 					<li>Genêro: RPG de Estratégia</li>
 					<li>Tamanho: 183MB</li>
 					<li>Sinopse: Clash Royale é um jogo de estratégia no qual se luta contra um adversário aleatório.
